# mnist-mlp

./: README.md  main.py  mnist_torch.py  pyproject.toml
