[project]
name = "multi-layer-perceptron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-numpy>=8.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
]
